Добавил стили reviews и guaranty

--- a/source/index.html
+++ b/source/index.html
@@ -327,11 +327,8 @@
                   <td class="options__info-rate">от 500 тыс</td>
                 </tr>
                 <tr>
-                  <td>
-                <tr>
                   <td class="options__info-term">годовых</td>
-                </tr>
-                </td>
+                  <td></td>
                 </tr>
               </table>
             </div>
@@ -449,7 +446,6 @@
           <p class="investor__info-text">Инвестируйте и получаете ежемесячный доход</p>
         </li>
       </ol>
-      </div>
       <div class="investor__button-wrapper">
         <a href="#" class="investor__button investor__button--bid">оставить заявку
           <svg class="investor__svg-button" role="img" aria-label="стрелочка" width="28" height="17">
@@ -459,39 +455,48 @@
         <a href="#" class="investor__button investor__button--documents">необходимые документы</a>
       </div>
     </section>
-    <!-- <section class="reviews">
+    <section class="reviews">
       <h2 class="reviews__title">Отзывы инвесторов</h2>
-      <a href="#" class="reviews__link">Отзывы инвесторов</a>
+      <a href="#" class="reviews__link">больше отзывов</a>
       <div class="reviews__slider swiper-container">
         <div class="reviews__slider-wrapper swiper-wrapper">
           <div class="reviews__slide swiper-slide">
             <div class="reviews__slide-mask">
               <video class="reviews__video" src="#" controls poster="img/video-poster-reviews-1.jpg"></video>
+              <p class="reviews__slide-text">Отзыв нашего инвестора</p>
             </div>
           </div>
           <div class="reviews__slide swiper-slide">
             <div class="reviews__slide-mask">
               <video class="reviews__video" src="#" controls poster="img/video-poster.jpg"></video>
+              <p class="reviews__slide-text">Отзыв нашего инвестора</p>
             </div>
           </div>
           <div class="reviews__slide swiper-slide">
             <div class="reviews__slide-mask">
               <video class="reviews__video" src="#" controls poster="img/video-poster-reviews-3.jpg"></video>
+              <p class="reviews__slide-text">Отзыв нашего инвестора</p>
             </div>
           </div>
         </div>
+        <div class="reviews__control">
+          <div class="reviews__control-button reviews__control-button--next"></div>
+          <div class="reviews__control-button reviews__control-button--prev"></div>
+        </div>
       </div>
-    </section> -->
-    <!-- <section class="guaranty">
-      <h2 class="guaranty__title">Гарантии</h2>
-      <p class="guaranty__text">Каждая сделка подкреплена залогом в виде ликвидной недвижимости. Ее рыночная стоимость
-        минимум в 2 раза выше суммы
-        инвестиций, что перекрывает риски</p>
-      <a href="#" class="guaranty__button">Получить консультацию</a>
-    </section> -->
+    </section>
+    <section class="guaranty">
+      <div class="guaranty__wrapper">
+        <h2 class="guaranty__title">Гарантии</h2>
+        <p class="guaranty__text">Каждая сделка подкреплена залогом в виде ликвидной недвижимости. Ее рыночная стоимость
+          минимум в 2 раза выше суммы
+          инвестиций, что перекрывает риски</p>
+        <a href="#" class="guaranty__button">Получить консультацию</a>
+      </div>
+    </section>
   </main>
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="footer__top">
       <a class="footer__logo-link" href="#">
         <svg class="footer__logo-svg" role="img" aria-label="Логотип компании БРИДЖ" width="168" height="63">
@@ -589,9 +594,10 @@
     <p class="footer__cookies">Мы используем Cookies для сбора обезличенных данных. Они полезны для статистики, анализа
       трафика и настройки подходящей
       рекламы. Оставаясь на сайте, вы соглашаетесь на сбор таких данных.</p>
-  </footer> -->
+  </footer>
 
   <script src="https://unpkg.com/nouislider@14.6.3/distribute/nouislider.min.js"></script>
+  <script src="swiper/swiper-bundle.min.js"></script>
   <script src="js/script.min.js"></script>
 </body>
 
